--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CatanRollTracker"
-        mc:Ignorable="d"
+        xmlns:local="clr-namespace:CatanRollTracker" d:DataContext="{d:DesignInstance Type=local:IntegerProperty}"
+		mc:Ignorable="d"
         Title="Catan Roll Tracker" Height="450" Width="800">
 	<Window.Resources>
 		<Style TargetType="ProgressBar">
@@ -14,7 +14,27 @@
 			<Setter Property="HorizontalAlignment" Value="Center"></Setter>
 			<Setter Property="Width" Value="200"></Setter>
 		</Style>
+		<Style TargetType="Label">
+			<Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+			<Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+			<Setter Property="FontWeight" Value="Heavy"></Setter>
+			<Setter Property="FontSize" Value="20"></Setter>
+		</Style>
 	</Window.Resources>
+	<Window.InputBindings>
+		<KeyBinding Command="{Binding Roll3Command}" Key="NumPad3"></KeyBinding>
+		<KeyBinding Command="{Binding Roll2Command}" Key="NumPad2"></KeyBinding>
+		
+		<KeyBinding Command="{Binding Roll4Command}" Key="NumPad4"></KeyBinding>
+		<KeyBinding Command="{Binding Roll5Command}" Key="NumPad5"></KeyBinding>
+		<KeyBinding Command="{Binding Roll6Command}" Key="NumPad6"></KeyBinding>
+		<KeyBinding Command="{Binding Roll7Command}" Key="NumPad7"></KeyBinding>
+		<KeyBinding Command="{Binding Roll8Command}" Key="NumPad8"></KeyBinding>
+		<KeyBinding Command="{Binding Roll9Command}" Key="NumPad9"></KeyBinding>
+		<KeyBinding Command="{Binding Roll10Command}" Key="I"></KeyBinding>
+		<KeyBinding Command="{Binding Roll11Command}" Key="O"></KeyBinding>
+		<KeyBinding Command="{Binding Roll12Command}" Key="P"></KeyBinding>
+	</Window.InputBindings>
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="5*"></RowDefinition>
@@ -49,20 +69,32 @@
 		<ProgressBar Grid.Row="0" Grid.Column="9" Name="roll11sPB"></ProgressBar>
 		<ProgressBar Grid.Row="0" Grid.Column="10" Name="roll12sPB"></ProgressBar>
 		
-		<Label Grid.Row="1" Grid.ColumnSpan="12" Content="Roll value" HorizontalContentAlignment="Center"></Label>
+		<Label Grid.Row="1" Grid.ColumnSpan="12" Content="Roll value" FontSize="12"></Label>
 		
-		<Label Grid.Row="2" Grid.Column="0" Name="roll2sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="1" Name="roll3sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="2" Name="roll4sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="3" Name="roll5sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="4" Name="roll6sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="5" Name="roll7sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="6" Name="roll8sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="7" Name="roll9sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="8" Name="roll10sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="9" Name="roll11sLbl"></Label>
-		<Label Grid.Row="2" Grid.Column="10" Name="roll12sLbl"></Label>
-		
-		<Label Grid.Row="3" Grid.ColumnSpan="12" Content="Roll count" HorizontalContentAlignment="Center"></Label>
+		<Label Grid.Row="2" Grid.Column="0" Content="2" FontSize="19"></Label>
+		<Label Grid.Row="2" Grid.Column="1" Content="3" FontSize="22"></Label>
+		<Label Grid.Row="2" Grid.Column="2" Content="4" FontSize="25"></Label>
+		<Label Grid.Row="2" Grid.Column="3" Content="5" FontSize="28"></Label>
+		<Label Grid.Row="2" Grid.Column="4" Content="6" FontSize="28" Foreground="Red"></Label>
+		<Label Grid.Row="2" Grid.Column="5" Content="7" FontSize="28" Foreground="Orange"></Label>
+		<Label Grid.Row="2" Grid.Column="6" Content="8" FontSize="28" Foreground="Red"></Label>
+		<Label Grid.Row="2" Grid.Column="7" Content="9" FontSize="28"></Label>
+		<Label Grid.Row="2" Grid.Column="8" Content="10" FontSize="25"></Label>
+		<Label Grid.Row="2" Grid.Column="9" Content="11" FontSize="22"></Label>
+		<Label Grid.Row="2" Grid.Column="10" Content="12" FontSize="19"></Label>
+
+		<Label Grid.Row="3" Grid.ColumnSpan="12" Content="Roll count" FontSize="12"></Label>
+
+		<Label Grid.Row="4" Grid.Column="0" Name="roll2sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="1" Name="roll3sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="2" Name="roll4sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="3" Name="roll5sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="4" Name="roll6sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="5" Name="roll7sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="6" Name="roll8sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="7" Name="roll9sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="8" Name="roll10sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="9" Name="roll11sLbl" Content="0"></Label>
+		<Label Grid.Row="4" Grid.Column="10" Name="roll12sLbl" Content="0"></Label>
 	</Grid>
 </Window>
